Switched to Bower components.

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
 
     <link rel="stylesheet" type="text/css" href="style/app.css" />
 
-    <script defer src="/js/event-dispatcher.js"></script>
-    <script defer src="/js/websocket-utils.js"></script>
-    <script defer src="/js/transport.js"></script>
-    <script defer src="/js/peer-connection.js"></script>
-    <script defer src="/js/app.js"></script>
+    <script defer src="/components/alzas-event-dispatcher/dist/event-dispatcher.js"></script>
+    <script defer src="/components/fxos-websocket-server/dist/fxos-websocket-server.js"></script>
+
+    <script defer src="js/transport.js"></script>
+    <script defer src="js/peer-connection.js"></script>
+    <script defer src="js/app.js"></script>
   </head>
   <body>
     <div class="device-section">
